[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Scores.gd" type="Script" id=1]
[ext_resource path="res://fonts/Mukta/Mukta-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GuyPrognosis.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/BtnEndTurn.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/SendFlowers-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://img/Background_ice_cream.png" type="Texture" id=6]
[ext_resource path="res://src/UI.gd" type="Script" id=7]
[ext_resource path="res://img/money_bag_more_pxls.png" type="Texture" id=8]
[ext_resource path="res://src/BtnRoadblock.tscn" type="PackedScene" id=9]
[ext_resource path="res://fonts/Mukta/Mukta-Medium.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://src/BtnIcecream.tscn" type="PackedScene" id=11]
[ext_resource path="res://img/hour_glass.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 2 )

[node name="UI" type="Node2D"]
position = Vector2( 900, 0 )
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 900 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 890.0
rect_min_size = Vector2( 160, 880 )

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 90.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Love Finds A Way[/center]"
text = "Love Finds A Way"
fit_content_height = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 164.0
margin_bottom = 114.0
custom_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 164.0
margin_bottom = 172.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 80.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 20 )
texture = ExtResource( 12 )
stretch_mode = 6

[node name="TurnCounter" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "0"
text = "0"
fit_content_height = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 164.0
margin_bottom = 196.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 164.0
margin_bottom = 254.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 20 )
texture = ExtResource( 8 )
stretch_mode = 6

[node name="Money" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "10$"
text = "10$"
fit_content_height = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 258.0
margin_right = 164.0
margin_bottom = 278.0
custom_constants/separation = 20

[node name="Prognoses" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 282.0
margin_right = 164.0
margin_bottom = 282.0

[node name="GuyPrognosis" parent="VBoxContainer/Prognoses" instance=ExtResource( 3 )]

[node name="IcecreamBtn" parent="VBoxContainer" instance=ExtResource( 11 )]
margin_top = 286.0
margin_right = 164.0
margin_bottom = 366.0

[node name="RoadblockBtn" parent="VBoxContainer" instance=ExtResource( 9 )]
margin_top = 370.0
margin_right = 164.0
margin_bottom = 450.0

[node name="EndTurnBtn" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 454.0
margin_right = 164.0
margin_bottom = 534.0

[node name="Scores" type="Control" parent="."]
visible = false
margin_left = -775.0
margin_top = 300.0
margin_right = -735.0
margin_bottom = 340.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="Scores"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 610.0
margin_bottom = 300.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Scores"]
margin_right = 640.0
margin_bottom = 340.0

[node name="MarginContainer" type="MarginContainer" parent="Scores/VBoxContainer"]
margin_right = 640.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Title" type="RichTextLabel" parent="Scores/VBoxContainer"]
margin_top = 34.0
margin_right = 640.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 60 )
custom_colors/default_color = Color( 0.917647, 0, 0.321569, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Love Found A Way[/center]"
text = "Love Found A Way"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="Scores/VBoxContainer"]
margin_top = 98.0
margin_right = 640.0
margin_bottom = 182.0

[node name="MarginContainer" type="MarginContainer" parent="Scores/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 0 )

[node name="LevelNumbers" type="RichTextLabel" parent="Scores/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 284.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Neighborhood 0:
Neighborhood 1:"
text = "Neighborhood 0:
Neighborhood 1:"
fit_content_height = true
scroll_active = false

[node name="TurnNumbers" type="RichTextLabel" parent="Scores/VBoxContainer/HBoxContainer"]
margin_left = 288.0
margin_right = 403.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[right]78 turns
598 turns[/right]"
text = "78 turns
598 turns"
fit_content_height = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="Scores/VBoxContainer/HBoxContainer"]
margin_left = 407.0
margin_right = 437.0
margin_bottom = 84.0
rect_min_size = Vector2( 30, 60 )

[node name="Buttons" type="VBoxContainer" parent="Scores/VBoxContainer/HBoxContainer"]
margin_left = 441.0
margin_right = 556.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Scores/VBoxContainer/HBoxContainer/Buttons"]
margin_right = 115.0

[node name="Button" type="Button" parent="Scores/VBoxContainer/HBoxContainer/Buttons"]
margin_right = 115.0
margin_bottom = 20.0
text = "Play"

[node name="Button2" type="Button" parent="Scores/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 20.0
margin_right = 115.0
margin_bottom = 40.0
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="Scores/VBoxContainer/HBoxContainer"]
margin_left = 560.0
margin_right = 640.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 60 )
